tests/ui/duplicate/dupe-symbols-4.stderr
error: symbol `fail` is already defined
  --> $DIR/dupe-symbols-4.rs:23:5
   |
LL |     fn fail(self) {}
   |     ^^^^^^^^^^^^^

error: aborting due to previous error

